--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,26 @@
+
+
 body{
     margin: 0;
     padding: 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     
 }
 .header{
     height: 30%;
+   display: flex;
+   gap: 16px;
+   flex-direction: column;
+   background-color: #1F2937;
+   padding-left: 48px;
+
+
+
 }
+
 .section1{
     height: 20%;
 }
