--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,11 @@ body{
 .LHL1{
     font-size: 48px;
     font-weight: 900;
-    color: #F9FAF8;}*/
+    color: #F9FAF8;}
+.LHL2{
+    font-size: 18px;
+    color: #E5E7EB;
+}
 
 
 /*.lower-header-right{
