--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,20 @@ body{
 .LHL1{
     font-size: 48px;
     font-weight: 900;
-    color: #F9FAF8;}
+    color: #F9FAF8;
+}
 .LHL2{
     font-size: 18px;
     color: #E5E7EB;
+}
+.LHL3{
+    width: 100px;
+    height: 25px;
+    background-color: #3882F6;
+    border-radius: 6px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F9FAF8;
 }
 
 
