--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,10 @@ body{
    display: flex;
    gap: 16px;
    flex-direction: column;
-   background-color: #1F2937;
+  
    padding-left: 48px;
 
-
+ background-color: #1F2937;
 
 }
 .upper-header{
@@ -76,6 +76,11 @@ body{
 
 .section1{
     height: 20%;
+  display: flex;
+   gap: 16px;
+   flex-direction: column;
+  padding-left: 48px;
+
 }
 .section2{
    
