--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,19 @@ body{
   padding-left: 48px;
 
 }
+.upper-section1{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+     padding-top: 12px ;
+
+}
+
+
+
+
 .section2{
    
  height: 20%
