--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body{
 }
 
 .section1{
-    height: 20%;
+    height: 35%;
   display: flex;
    gap: 16px;
    flex-direction: column;
@@ -91,6 +91,23 @@ body{
      padding-top: 12px ;
 
 }
+/*.lower-section1{
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+}
+.box-container{
+    display: flex;
+    flex-direction: column;
+    width: 180px;
+}
+.box{
+    width: 180px;
+    height: 200px;
+    border: 4px solid #3882F6;
+    border-radius: 8px;
+}*/
+
 
 
 
