--- a/styles.css
+++ b/styles.css
@@ -96,12 +96,12 @@ body{
     justify-content: center;
     gap: 48px;
 }
-/*.box-container{
+.box-container{
     display: flex;
     flex-direction: column;
     width: 180px;
 }
-.box{
+/*.box{
     width: 180px;
     height: 200px;
     border: 4px solid #3882F6;
