--- a/styles.css
+++ b/styles.css
@@ -101,12 +101,12 @@ body{
     flex-direction: column;
     width: 180px;
 }
-/*.box{
+.box{
     width: 180px;
     height: 200px;
     border: 4px solid #3882F6;
     border-radius: 8px;
-}*/
+}
 
 
 
