--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,28 @@ body{
 
 .section2{
    
- height: 20%
+ height: 35%;
+ background-color: #E5E7EB;
+ display: flex;
+ justify-content: center;
 }
+/*.quote-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 864px;
+    gap: 16px;
+}
+.text-1{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+}
+.text-2{
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+}*/
 .section3{
      height: 20%
 }
