feat: add some styles to class text-2 inside quote-container

--- a/styles.css
+++ b/styles.css
@@ -131,11 +131,11 @@ body{
     color: #1F2937;
     font-weight: 300;
 }
-/*.text-2{
+.text-2{
     display: flex;
     justify-content: flex-end;
     font-weight: bold;
-}*/
+}
 .section3{
      height: 20%
 }
