--- a/styles.css
+++ b/styles.css
@@ -113,11 +113,12 @@ body{
 
 
 .section2{
-   
+   padding-left: 48px;
  height: 35%;
  background-color: #E5E7EB;
  display: flex;
  justify-content: center;
+ align-items: center;
 }
 .quote-container{
     display: flex;
@@ -125,11 +126,15 @@ body{
     justify-content: center;
     width: 864px;
     gap: 16px;
+   
 }
 .text-1{
     font-size: 36px;
     color: #1F2937;
     font-weight: 300;
+   /* display: flex;
+    justify-content: center;
+    border: 2px solid #3882F6;*/
 }
 .text-2{
     display: flex;
