--- a/styles.css
+++ b/styles.css
@@ -146,11 +146,43 @@ body{
      padding-left: 48px;
      align-items: center;
 }
-/*.content-wrapper{
+.content-wrapper{
     background-color: #3882F6;
     width: 1000px;
     height: 120px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+/*.content-left{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.content-bold{
+    font-size: 24px;
+    color:#F9FAF8;
+    font-weight: bold;
+}
+.normal-content{
+     color:#F9FAF8;
+}
+button{
+     width: 150px;
+    height: 30px;
+    background-color: #3882F6;
+    border-radius: 6px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F9FAF8;
 }*/
 .footer{
     height: 10%;
+    /* background-color:#1F2937 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: #F9FAF8;*/
 }
