--- a/styles.css
+++ b/styles.css
@@ -160,12 +160,12 @@ body{
     flex-direction: column;
     gap: 8px;
 }
-/*.content-bold{
+.content-bold{
     font-size: 24px;
     color:#F9FAF8;
     font-weight: bold;
 }
-.normal-content{
+/*.normal-content{
      color:#F9FAF8;
 }
 button{
