feat: add some styles to normal-content class inside content-left class

--- a/styles.css
+++ b/styles.css
@@ -165,10 +165,10 @@ body{
     color:#F9FAF8;
     font-weight: bold;
 }
-/*.normal-content{
+.normal-content{
      color:#F9FAF8;
 }
-button{
+/*button{
      width: 150px;
     height: 30px;
     background-color: #3882F6;
