feat: add some styles to button in section 3

--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ body{
 .normal-content{
      color:#F9FAF8;
 }
-/*button{
+button{
      width: 150px;
     height: 30px;
     background-color: #3882F6;
