--- a/styles.css
+++ b/styles.css
@@ -176,13 +176,13 @@ button{
     font-size: 20px;
     font-weight: bold;
     color: #F9FAF8;
-}*/
+}
 .footer{
     height: 10%;
-    /* background-color:#1F2937 ;
+     background-color:#1F2937 ;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    color: #F9FAF8;*/
+    color: #F9FAF8;
 }
