--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,27 @@
-
-
-body{
+*{
     margin: 0;
     padding: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+    box-sizing: border-box;
+   
+    
+    
+    
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     
 }
+
+
+
+   
+    
+     
+
 .header{
-    height: 35%;
+    /*height: 35%;*/
+     height: 80vh;
    display: flex;
-   gap: 16px;
+   gap: 72px;
    flex-direction: column;
+   justify-content: center;
   
    padding-left: 48px;
 
@@ -75,12 +83,12 @@ body{
 }
 
 .section1{
-    height: 30%;
+    height: 70vh;
   display: flex;
    gap: 16px;
    flex-direction: column;
   padding-left: 48px;
-
+  
 }
 .upper-section1{
     display: flex;
@@ -113,12 +121,13 @@ body{
 
 
 .section2{
-   padding-left: 48px;
- height: 35%;
+ padding-left: 48px;
+ height: 70vh;
  background-color: #E5E7EB;
  display: flex;
  justify-content: center;
  align-items: center;
+
 }
 .quote-container{
     display: flex;
@@ -140,11 +149,12 @@ body{
     font-weight: bold;
 }
 .section3{
-     height: 20%;
+    height: 70vh;
      display: flex;
      justify-content: center;
      padding-left: 48px;
      align-items: center;
+     
 }
 .content-wrapper{
     background-color: #3882F6;
@@ -178,11 +188,12 @@ button{
     color: #F9FAF8;
 }
 .footer{
-    height: 10%;
+    height: 10vh;
      background-color:#1F2937 ;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 18px;
     color: #F9FAF8;
+    
 }
