--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
      
 
 .header{
-    /*height: 35%;*/
+    
      height: 80vh;
    display: flex;
    gap: 72px;
@@ -33,6 +33,9 @@
     justify-content: space-between;
     padding-top: 12px ;
     padding-right:48px;
+   align-items: center;
+   justify-content: space-between;
+  
 }
 .upper-header-left{
     color:#F9FAF8;
