chore: complete the first draft of  the project

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 .upper-header{
     display:flex;
     justify-content: space-between;
-    padding-top: 12px ;
+    padding-top: 12px;
     padding-right:48px;
    align-items: center;
    justify-content: space-between;
@@ -193,3 +193,4 @@ button{
     color: #F9FAF8;
     
 }
+/* The end */
